cmake_minimum_required(VERSION 3.1.0)
project(realSenseDirver)
add_definitions(-std=c++11)
add_executable(run main.cpp)
aux_source_directory(. SRC_LIST)
#add_executable(${PROJECT_NAME} ${SRC_LIST})
find_package( OpenCV  REQUIRED )
find_package( realsense2 REQUIRED )
#install(TARGETS pic_cap RUNTIME DESTINATION bin)
set(DEPENDENCIES realsense2)
target_link_libraries(run ${OpenCV_LIBS})
target_link_libraries(run ${DEPENDENCIES})
#target_link_libraries(pic_cap ${REALSENSE2_LIBS})
include_directories(/home/librealsense-2.40.0/include)